# sgpykit

./: .gitignore  LICENSE  README.md  differences.md  pyproject.toml  run-tests.sh  simple_test.sh
docs-examples/: sparse_grids_tutorial.ipynb  tutorial_adaptive.ipynb
sgpykit/: __init__.py
sgpykit/main/: __init__.py  adapt_sparse_grid.py  compute_sobol_indices_from_sparse_grid.py  convert_to_modal.py  create_sparse_grid.py  create_sparse_grid_add_multiidx.py  create_sparse_grid_multiidx_set.py  create_sparse_grid_quick_preset.py  derive_sparse_grid.py  evaluate_on_sparse_grid.py  export_sparse_grid_to_file.py  hessian_sparse_grid.py  interpolate_on_sparse_grid.py  plot3_sparse_grid.py  plot_sparse_grid.py  plot_sparse_grids_interpolant.py  quadrature_on_sparse_grid.py  reduce_sparse_grid.py
sgpykit/src/: GK_lev_table.py  __init__.py  combination_technique.py  compare_sparse_grids.py  compute_modal_tensor.py  delta_to_combitec.py  detect_insufficient_tolerance.py  find_lexicographic.py  find_lexicographic_tol.py  generate_pattern.py  lookup_merge_and_diff.py  mysortrows.py  plot_idx_status.py  tensor_grid.py
sgpykit/tools/: __init__.py
sgpykit/tools/converter_functions/: __init__.py  asreduced.py  tensor_to_sparse.py
sgpykit/tools/idxset_functions/: __init__.py  check_index_admissibility.py  check_set_admissibility.py  define_functions_for_rule.py  fast_TD_set.py  multiidx_box_set.py  multiidx_gen.py  plot_multiidx_set.py
sgpykit/tools/knots_functions/: __init__.py  constants.py  constants_normal_leja.py  knots_CC.py  knots_GK.py  knots_beta.py  knots_beta_leja.py  knots_exponential.py  knots_exponential_leja.py  knots_gamma.py  knots_gamma_leja.py  knots_leja.py  knots_midpoint.py  knots_normal.py  knots_normal_leja.py  knots_trap.py  knots_triangular_leja.py  knots_uniform.py
sgpykit/util/: __init__.py  cell.py  checks.py  create_sparse_grid_construct.py  definitions.py  log.py  matlab.py  misc.py  plot.py  struct.py  struct_array.py
tests/: __init__.py
tests/sgpykit/src/: test_GK_lev_table.py  (+11 more)
(+102 files in other folders)
